<resources>
    <string name="app_name">Musicapp</string>

    <string name="albumsDescription">Activity shows lists of all albums you have on your phone.</string>
    <string name="artistsDescription">Activity shows lists of all artists you have on your phone.</string>
    <string name="playingDescription">Activity shows current song you have playing on your phone.</string>
    <string name="playlistsDescription">Activity shows playlists you have on your phone.</string>
    <string name="radioDescription">Activity shows radio stations you have on your phone.</string>

    <string name="requirementHeader">Requirements</string>

    <string name="albumsActivity">1) This class displays a list of albums for the user\n\n3) Uses ListView/Recycler view to show list of items</string>
    <string name="artistsActivity">1) This class displays a list of artists for the user \n\n2) Uses ListView/Recycler view to show list of artists.</string>
    <string name="playingActivity">1) This class displays media player for the user\n\n2) Screen showing current playing song. Uses MediaPlayer API.</string>
    <string name="playlistsActivity">1) This class displays a list of tracks for the user\n\n2)Uses ListView/Recycler view to show list of tracks.</string>
    <string name="radioActivity">1) This class displays a list of radio stations for the user. The user can click on the radio stations to start playing. The Spotify API or the Pandora API can be used to obtain the list of radio stations and play it for the user.</string>

</resources>

