<?xml version="1.0" encoding="utf-8"?>


 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.android.mymusicapp.PlayingActivity"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
                <HorizontalScrollView
                    android:id="@+id/hsv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fillViewport="true"
                    android:measureAllChildren="false"
                    android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/nav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#212121"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/home"
                        style="@style/CategoryStyle_buttons"
                        android:background="@color/category_navbar"
                        android:text="Home" />

                    <Button
                        android:id="@+id/playing"
                        style="@style/CategoryStyle_buttons"
                        android:background="@color/category_navbar"
                        android:text="Playing" />

                    <Button
                        android:id="@+id/artists"
                        style="@style/CategoryStyle_buttons"
                        android:background="@color/category_navbar"
                        android:text="Artists" />

                    <Button
                        android:id="@+id/playlists"
                        style="@style/CategoryStyle_buttons"
                        android:background="@color/category_navbar"
                        android:text="Playlists" />

                    <Button
                        android:id="@+id/radio"
                        style="@style/CategoryStyle_buttons"
                        android:background="@color/category_navbar"
                        android:text="Radio" />

                </LinearLayout>
                </HorizontalScrollView>
         </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activityText"
                android:text="@string/albumsDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activityHeader"
                android:text="@string/requirementHeader"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activityText"
                android:text="@string/albumsActivity"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/albumslist"/>


        </LinearLayout>
  </LinearLayout>

